Funcion contorno texto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="spanish">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -94,7 +94,7 @@
                             </label>
                         </div>
 
-                        <div class="contenedor-filtros ubicacion-column">
+                        <div class="contenedor-filtros ubicacion-column" id="contenedor-filtros">
                             <p>FILTROS</p>
 
                             <label for="img-brillo">Brillo</label>
@@ -222,9 +222,9 @@
                         CONTORNO
                     </p>
                     <div class="ubicacion-row espaciado-secciones">
-                        <button id="contorno1" type="button" class="boton-contorno color-alineado">
+                        <!-- <button id="contorno1" type="button" class="boton-contorno color-alineado">
                             Ninguno
-                        </button>
+                        </button> -->
                         <button id="contorno2" type="button" class="boton-contorno color-alineado">
                             Claro
                         </button>
