--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Genera tu meme &#128165</title>
         <link rel="stylesheet" href="style.css" />
         <script
         src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"
@@ -234,14 +234,16 @@
                     </div>
 
                     <label for="input-espaciado"> ESPACIADO </label>
-                    <input type="number" id="input-espaciado" class="espaciado-secciones diseño-form input-espaciado">
+                    <input type="number" min="1" value="5" max="10" id="input-espaciado" class="espaciado-secciones diseño-form input-espaciado">
 
                     <label for="select-interlineado">INTERLINEADO</label>
                     <select name="" id="select-interlineado" class="diseño-form">
-                        <option value="">1</option>
-                        <option value="">1.5</option>
-                        <option value="">2</option>
-                        <option value="">2.5</option>
+                        <option value="0.5">0.5</option>
+                        <option value="1">1</option>
+                        <option value="1.5" selected>1.5</option>
+                        <option value="2">2</option>
+                        <option value="2.5">2.5</option>
+                        <option value="3">3</option>
                     </select>
                 </form>
             </aside>
