Finalice con las funciones del generador en JS

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
                             <label>
                                 <select name="fondo" id="select-fondo" form="editor-imagen" class="diseño-form">
-                                    <option value="Ninguno">Ninguno</option>
-                                    <option value="Aclarar">Aclarar</option>
-                                    <option value="Oscurecer">Oscurecer</option>
-                                    <option value="Diferencia">Diferencia</option>
-                                    <option value="Luminosidad">Luminosidad</option>
-                                    <option value="Multiplicar">Multiplicar</option>    
+                                    <option value="normal">Ninguno</option>
+                                    <option value="screen">Aclarar</option>
+                                    <option value="color-burn">Oscurecer</option>
+                                    <option value="overlay">Cubrir</option>
+                                    <option value="color-dodge">Luminosidad</option>
+                                    <option value="multiply">Multiplicar</option>    
                                 </select>
                             </label>
                         </div>
