Cambio de funcion de fondo transparente y estilizacion

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="ubicacion-row espaciado-secciones">
                             <label class="ubicacion-row cuadro-color espaciado-row" id="etiquetas-color">
                                 <input type="color" id="color-fondo" name="" class="input-color"/>
-                                <span id="valor-color"> #000000 </span>
+                                <span id="valor-color" class="valor-color"> #000000 </span>
                             </label>
 
                             <label>
@@ -200,14 +200,14 @@
                             <label for="color-texto" class="ubicacion-column espaciado-row">COLOR
                                 <div class="ubicacion-row cuadro-color" id="etiquetas-color1">
                                     <input type="color" id="color-texto" class="input-color"/>
-                                    <span id="valor-color1"> #000000 </span>
+                                    <span id="valor-color1" class="valor-color"> #000000 </span>
                                 </div>
                             </label>
 
                             <label for="color-campo-texto" class="ubicacion-column">FONDO
                                 <div class="ubicacion-row cuadro-color" id="etiquetas-color2">
                                     <input type="color" id="color-campo-texto" class="input-color"/>
-                                    <span id="valor-color2"> #000000 </span>
+                                    <span id="valor-color2" class="valor-color"> #000000 </span>
                                 </div>
                             </label>
                         </div>
